グルメ雛形実装

--- a/index.html
+++ b/index.html
@@ -35,13 +35,27 @@
   <div class="tourism-title">Tourism</div>
   <div class="tourism-images">
     <div class="tourism-img-one"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
-    <div class="tourism-img-one"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
-    <div class="tourism-img-one"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
+    <div class="tourism-img-two"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
+    <div class="tourism-img-three"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
   </div>
   <div class="tourism-explanation">
     新潟県は、四季折々の自然を満喫できるスポットや、子供と一緒に楽しめる観光スポットが盛り沢山
   </div>
-  <input type="submit" value="tourism corner" class="tourism-cornerbtn">
+  <input type="submit" value="tourism corner" class="tourism-corner-btn">
+</div>
+
+<div class="gourmet-contents">
+  <div class="gourmet-title">Gourmet</div>
+  <div class="gourmet-images">
+    <div class="gourmet-img-one"><img src="https://niigata-kankou.or.jp/image/rendering/banner/10/trim.1200/3/2?v=1d61a40d5af08d96e7b311cc23adf7a22c33c609"></div>
+    <div class="gourmet-img-two"><img src="https://niigata-kankou.or.jp/image/rendering/banner/10/trim.1200/3/2?v=1d61a40d5af08d96e7b311cc23adf7a22c33c609"></div>
+    <div class="gourmet-img-three"><img src="https://niigata-kankou.or.jp/image/rendering/banner/10/trim.1200/3/2?v=1d61a40d5af08d96e7b311cc23adf7a22c33c609"></div>
+  </div>
+  <div class="gourmet-explanation">
+    「日本の米どころ」「日本酒の宝庫」。それだけではありません。
+    海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！です.
+  </div>
+  <input type="submit" value="Goumet-corner" class="gourmet-corner-btn">
 </div>
 
 </body>
