--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="tourism-explanation">
     新潟県は、四季折々の自然を満喫できるスポットや、子供と一緒に楽しめる観光スポットが盛り沢山
   </div>
-  <input type="submit" value="tourism corner" class="tourism-corner-btn">
+  <input type="submit" value="tourism Corner" class="tourism-corner-btn">
 </div>
 
 <div class="gourmet-contents">
@@ -55,7 +55,7 @@
     「日本の米どころ」「日本酒の宝庫」。それだけではありません。
     海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！です.
   </div>
-  <input type="submit" value="Goumet-corner" class="gourmet-corner-btn">
+  <input type="submit" value="Goumet Corner" class="gourmet-corner-btn">
 </div>
 
 <div class="sports-content">
@@ -69,8 +69,24 @@
     アルビレックスグループ
     サッカー、バスケットボール、野球など７種目のスポーツクラブを運営。それぞれの種目でトップチームからジュニアチームまで様々なカテゴリーのチームを整備し、チームの選手やスタッフはもちろん、サポーターやファン、ボランティアとして地域の子どもや大人が多数参加しています。
   </div>
-  <input type="submit" value="Sports-corner" class="sports-corner-btn">
+  <input type="submit" value="Sports Corner" class="sports-corner-btn">
 </div>
+
+<footer>
+  <div class="footer-btns">
+    <div class="tourism-btn"><a href="">Tourism-Corner</a></div>
+    <div class="gourmet-btn"><a href="">Gourmet-Corner</a></div>
+    <div class="sports-btn"><a href="">Sports-Corner</a></div>
+  </div>
+  <div class="sucsses">
+    <div class="infomation"><a href="">お問い合わせ</a></div>
+    <div class="over0¥-view"><a href="">このサイトについて</a></div>
+  </div>
+  <div class="company">
+    <div class="company-name">Niigata</div>
+    <div class="company-founded">since 2020</div>
+  </div>
+</footer>
 
 </body>
 </html>
