--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="top-contents">
   <div class="rogo">
-    <img src="https://s3-us-east-2.amazonaws.com/designevo/projects/uid-2179126/48be39b4a3d40f1d64c60444587c53b0/preview.png?t=1605834473794">
+    <img src="https://s3-us-east-2.amazonaws.com/designevo/projects/uid-2179126/2d7f6b20fa0b9144f33484b10672357e/preview.png?t=1605856943588">
   </div>
   <div class="title">新潟</div>
   <div class="top-images">
@@ -41,7 +41,7 @@
   <div class="tourism-explanation">
     新潟県は、四季折々の自然を満喫できるスポットや、子供と一緒に楽しめる観光スポットが盛り沢山
   </div>
-  <input type="submit" value="tourism Corner" class="tourism-corner-btn">
+  <div class="tourism-corner-btn"><a href="">Tourism-Corner</a></div>
 </div>
 
 <div class="gourmet-contents">
@@ -55,7 +55,7 @@
     「日本の米どころ」「日本酒の宝庫」。それだけではありません。
     海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！です.
   </div>
-  <input type="submit" value="Goumet Corner" class="gourmet-corner-btn">
+  <div class="gourmet-corner-btn"><a href="">Gourmet-Corner</a></div>
 </div>
 
 <div class="sports-content">
@@ -69,7 +69,7 @@
     アルビレックスグループ
     サッカー、バスケットボール、野球など７種目のスポーツクラブを運営。それぞれの種目でトップチームからジュニアチームまで様々なカテゴリーのチームを整備し、チームの選手やスタッフはもちろん、サポーターやファン、ボランティアとして地域の子どもや大人が多数参加しています。
   </div>
-  <input type="submit" value="Sports Corner" class="sports-corner-btn">
+  <div class="sports-corner-btn"><a href="">Sports-Corner</a></div>
 </div>
 
 <footer>
@@ -83,7 +83,8 @@
     <div class="over0¥-view"><a href="">このサイトについて</a></div>
   </div>
   <div class="company">
-    <div class="company-name">Niigata</div>
+    <div class="company-name">Rice
+    </div>
     <div class="company-founded">since 2020</div>
   </div>
 </footer>
