--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charaset = "uft-8">
     <title>Niigata-Picture-Book</title>
     <link rel = "stylesheet" href = "stylesheet.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
   </head>
 <body>
 <div class="all">
