--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
 </div>
 
 <div class="tourism-contents">
-  <div class="tourism-title">Tourism</div>
-  <div class="tourism-images">
-    <div class="tourism-img-one"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/2678/trim.900/3/2?v=e63398af3ee636386405651ac773e7eb6853a675"></div>
-    <div class="tourism-img-two"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
-    <div class="tourism-img-three"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/3557/trim.900/3/2?v=2ef2a7505d93c474def5ae3e6e47bce141b0c3fe"></div>
+  <div class="tourism-back">
+    <div class="tourism-letter">
+      <div class="tourism-title">Tourism</div>
+      <div class="tourism-explanation">
+        春夏秋冬、季節ごとの自然景観がそれぞれにダイナミックで美しい新潟県。そんな自然の恩恵をネイチャースポットで堪能するのはもちろん、日本海の海の幸やお米の国･新潟のユニークなアプローチなど、現地にいるからこそわかる魅力のスポットを紹介します。      </div>
+      <div class="tourism-corner-btn"><a href="">Tourism-Corner</a></div>
+    </div>
+    <div class="tourism-images">
+      <div class="tourism-img1"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/2678/trim.900/3/2?v=e63398af3ee636386405651ac773e7eb6853a675"></div>
+      <div class="tourism-img2"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/9909/trim.900/3/2?v=1f53c8920cc731e5a9397e96a387f95d28b91648"></div>
+      <div class="tourism-img3"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/3557/trim.900/3/2?v=2ef2a7505d93c474def5ae3e6e47bce141b0c3fe"></div>
+    </div>
   </div>
-  <div class="tourism-explanation">
-    新潟県は、四季折々の自然を満喫できるスポットや、子供と一緒に楽しめる観光スポットが盛り沢山
-  </div>
-  <div class="tourism-corner-btn"><a href="">Tourism-Corner</a></div>
 </div>
 
 <div class="gourmet-contents">
@@ -82,8 +85,7 @@
     <div class="over0¥-view"><a href="">このサイトについて</a></div>
   </div>
   <div class="company">
-    <div class="company-name">Rice
-    </div>
+    <div class="company-name">Rice</div>
     <div class="company-founded">since 2020</div>
   </div>
 </div>
