--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="tourism-title">Tourism</div>
       <div class="tourism-explanation">
         春夏秋冬、季節ごとの自然景観がそれぞれにダイナミックで美しい新潟県。そんな自然の恩恵をネイチャースポットで堪能するのはもちろん、日本海の海の幸やお米の国･新潟のユニークなアプローチなど、現地にいるからこそわかる魅力のスポットを紹介します。      </div>
-      <div class="tourism-corner-btn"><a href="">Tourism-Corner</a></div>
+      <div class="tourism-corner-btn"><a href="">Tourism-Corner　　　　➡︎　</a></div>
     </div>
     <div class="tourism-images">
       <div class="tourism-img1"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/2678/trim.900/3/2?v=e63398af3ee636386405651ac773e7eb6853a675"></div>
@@ -46,32 +46,39 @@
 </div>
 
 <div class="gourmet-contents">
-  <div class="gourmet-title">Gourmet</div>
-  <div class="gourmet-images">
-    <div class="gourmet-img-one"><img src="https://media-assets.aumo.jp/uploads/photo/external_photo/data/189391/large_25f2d876-760d-46ab-a7fe-ebd2f49fd8df.jpeg"></div>
-    <div class="gourmet-img-two"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/3741/trim.900/3/2?v=7f8f202fdd28ad5143b152bbe809624226d249bb"></div>
-    <div class="gourmet-img-three"><img src="https://resources.matcha-jp.com/resize/720x2000/2018/02/20-48579.jpeg"></div>
+  <div class="gourmet-back">
+    <div class="gourmet-images">
+      <div class="gourmet-img1"><img src="https://media-assets.aumo.jp/uploads/photo/external_photo/data/189391/large_25f2d876-760d-46ab-a7fe-ebd2f49fd8df.jpeg"></div>
+      <div class="gourmet-img2"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/3741/trim.900/3/2?v=7f8f202fdd28ad5143b152bbe809624226d249bb"></div>
+      <div class="gourmet-img3"><img src="https://resources.matcha-jp.com/resize/720x2000/2018/02/20-48579.jpeg"></div>
+    </div>
+    <div class="gourmet-letter">
+      <div class="gourmet-title">Gourmet</div>
+      <div class="gourmet-explanation">
+        「日本の米どころ」「日本酒の宝庫」。それだけではありません。
+          海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！です.
+      </div>
+      <div class="gourmet-corner-btn"><a href="">Gourmet-Corner　　　　➡︎　</a></div>
+    </div>
   </div>
-  <div class="gourmet-explanation">
-    「日本の米どころ」「日本酒の宝庫」。それだけではありません。
-    海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！です.
-  </div>
-  <div class="gourmet-corner-btn"><a href="">Gourmet-Corner</a></div>
 </div>
-
+  
 <div class="sports-content">
-  <div class="sports-title">Sports</div>
-  <div class="sports-images">
-    <div class="sports-img-one"><img src="https://www.niigata-nippo.co.jp/newsfile/image/detail/0071947000465828.jpg"></div>
-    <div class="sports-img-two"><img src="https://file.basket-count.com/images/articles/945d58d6c7792a1e18394aefb02eb4a0.jpg"></div>
-    <div class="sports-img-three"><img src="https://image.jimcdn.com/app/cms/image/transf/none/path/s2bc177f8a3035f18/image/ie109ea642d2adbc7/version/1554593837/image.jpg"></div>
+  <div class="sports-back">
+    <div class="sports-letter">
+      <div class="sports-title">Sports</div>
+      <div class="sports-explanation">
+        アルビレックスグループ
+        サッカー、バスケットボール、野球など７種目のスポーツクラブを運営。それぞれの種目でトップチームからジュニアチームまで様々なカテゴリーのチームを整備し、チームの選手やスタッフはもちろん、サポーターやファン、ボランティアとして地域の子どもや大人が多数参加しています。
+      </div>
+      <div class="sports-corner-btn"><a href="">Sports-Corner　　　　➡︎　</a></div>
+    </div>
+    <div class="sports-images">
+      <div class="sports-img1"><img src="https://www.niigata-nippo.co.jp/newsfile/image/detail/0071947000465828.jpg"></div>
+      <div class="sports-img2"><img src="https://file.basket-count.com/images/articles/945d58d6c7792a1e18394aefb02eb4a0.jpg"></div>
+      <div class="sports-img3"><img src="https://image.jimcdn.com/app/cms/image/transf/none/path/s2bc177f8a3035f18/image/ie109ea642d2adbc7/version/1554593837/image.jpg"></div>
+    </div>
   </div>
-  <div class="sports-explanation">
-    アルビレックスグループ
-    サッカー、バスケットボール、野球など７種目のスポーツクラブを運営。それぞれの種目でトップチームからジュニアチームまで様々なカテゴリーのチームを整備し、チームの選手やスタッフはもちろん、サポーターやファン、ボランティアとして地域の子どもや大人が多数参加しています。
-  </div>
-  <div class="sports-corner-btn"><a href="">Sports-Corner</a></div>
-</div>
 </div>
 
 <div class="footer">
