フッターの実装

--- a/index.html
+++ b/index.html
@@ -82,18 +82,16 @@
 </div>
 
 <div class="footer">
-  <div class="footer-btns">
-    <div class="tourism-btn"><a href="">Tourism-Corner</a></div>
-    <div class="gourmet-btn"><a href="">Gourmet-Corner</a></div>
-    <div class="sports-btn"><a href="">Sports-Corner</a></div>
-  </div>
-  <div class="sucsses">
-    <div class="infomation"><a href="">お問い合わせ</a></div>
-    <div class="over0¥-view"><a href="">このサイトについて</a></div>
-  </div>
-  <div class="company">
-    <div class="company-name">Rice</div>
-    <div class="company-founded">since 2020</div>
+  <div class="footer-contents">
+    <div class="footer-btns">
+      <div class="content-btn"><a href="">Tourism-Corner</a></div>
+      <div class="content-btn"><a href="">Gourmet-Corner</a></div>
+      <div class="content-btn"><a href="">Sports-Corner</a></div>
+    </div>
+    <div class="sucsses">
+      <div class="infomation"><a href="">お問い合わせ</a></div>
+      <div class="infomation"><a href="">このサイトについて</a></div>
+    </div>
   </div>
 </div>
 
