--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="greeting-contents">
   <div class="greeting">Welcome</div>
-  <div class="greeting-explanation">縦に長い面積を持つ新潟県は、上から下越地方・中越地方・上越地方、そして佐渡地方の大きく4つに分かれています。
+  <div class="greeting-explanation show">縦に長い面積を持つ新潟県は、上から下越地方・中越地方・上越地方、そして佐渡地方の大きく4つに分かれています。
     なぜ上から下越なのか…。その由来は日本の都が京都だった時代まで遡ります。
     当時まとめて「越（こし）」と呼ばれていた福井・石川・富山・新潟は、分割されて京都に近い地域から「越前」「越中」「越後」と呼ばれるようになりました。
     この考え方が手本となり、京都に近い方から「上越」「中越」「下越」となったのです。
@@ -31,7 +31,7 @@
 
 <div class="tourism-contents">
   <div class="tourism-back">
-    <div class="tourism-letter">
+    <div class="tourism-letter show">
       <div class="tourism-title">Tourism</div>
       <div class="tourism-explanation">
         春夏秋冬、季節ごとの自然景観がそれぞれにダイナミックで美しい新潟県。そんな自然の恩恵をネイチャースポットで堪能するのはもちろん、日本海の海の幸やお米の国･新潟のユニークなアプローチなど、現地にいるからこそわかる魅力のスポットを紹介します。      </div>
@@ -52,11 +52,11 @@
       <div class="gourmet-img2"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/3741/trim.900/3/2?v=7f8f202fdd28ad5143b152bbe809624226d249bb"></div>
       <div class="gourmet-img3"><img src="https://resources.matcha-jp.com/resize/720x2000/2018/02/20-48579.jpeg"></div>
     </div>
-    <div class="gourmet-letter">
+    <div class="gourmet-letter show">
       <div class="gourmet-title">Gourmet</div>
       <div class="gourmet-explanation">
         「日本の米どころ」「日本酒の宝庫」。それだけではありません。
-          海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！です.
+          海の幸、山の幸はもちろん、ぬくもりあふれる郷土料理やご当地グルメ、『うまい！』がぎっしり！のグルメを紹介します！
       </div>
       <div class="gourmet-corner-btn"><a href="">Gourmet-Corner　　　　➡︎　</a></div>
     </div>
@@ -65,7 +65,7 @@
   
 <div class="sports-content">
   <div class="sports-back">
-    <div class="sports-letter">
+    <div class="sports-letter show">
       <div class="sports-title">Sports</div>
       <div class="sports-explanation">
         アルビレックスグループ
