トップ画面　名前記入

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
 <div class="all">
 <div class="top-contents">
-  <div class="title">新潟</div>
+  <div class="title1">新潟</div>
+  <div class="title2">日本三大夜桜<br>　上越市 高田城址公園</div>
+  <div class="title3">日本三代花火<br>　長岡市 長岡花火大会</div>
+  <div class="title4">弥彦村<br>　弥彦公園もみじ谷</div>
+  <div class="title5">十日町市<br>　星峠の棚田</div>
   <div class="top-images">
     <div class="top-img1"><img src="https://tshop.r10s.jp/f152269-minamiuonuma/cabinet/item/image01/5/cn236-r.jpg"></div>
     <div class="top-img2"><img src="https://rimage.gnst.jp/gurutabi.gnavi.co.jp/image/public/img/article/5a/3f/art002372/article_art002372_2.jpg?20190318121100&rw=600"></div>
