tourismページの遷移実装

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charaset = "uft-8">
     <title>Niigata-Picture-Book</title>
-    <link rel = "stylesheet" href = "stylesheet.css">
+    <link rel = "stylesheet" href = "top.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>  </head>
 <body>
 <div class="all">
@@ -39,7 +39,7 @@
       <div class="tourism-title">Tourism</div>
       <div class="tourism-explanation">
         春夏秋冬、季節ごとの自然景観がそれぞれにダイナミックで美しい新潟県。そんな自然の恩恵をネイチャースポットで堪能するのはもちろん、日本海の海の幸やお米の国･新潟のユニークなアプローチなど、現地にいるからこそわかる魅力のスポットを紹介します。      </div>
-      <div class="tourism-corner-btn"><a href="">Tourism-Corner　　　　➡︎　</a></div>
+      <div class="tourism-corner-btn"><a href="tourism.html">Tourism-Corner　　　　➡︎　</a></div>
     </div>
     <div class="tourism-images">
       <div class="tourism-img1"><img src="https://niigata-kankou.or.jp/image/rendering/attraction_image/2678/trim.900/3/2?v=e63398af3ee636386405651ac773e7eb6853a675"></div>
