遷移先の記述

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="footer">
   <div class="footer-contents">
     <div class="footer-btns">
-      <div class="content-btn"><a href="">Tourism-Corner</a></div>
+      <div class="content-btn"><a href="tourism.html">Tourism-Corner</a></div>
       <div class="content-btn"><a href="">Gourmet-Corner</a></div>
       <div class="content-btn"><a href="">Sports-Corner</a></div>
     </div>
