--- a/tourism.html
+++ b/tourism.html
@@ -7,6 +7,27 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> 
   </head>
   <body>
+
+
+
+
+
+
+
+
+    <div class="footer">
+      <div class="footer-contents">
+        <div class="footer-btns">
+          <div class="content-btn"><a href="tourism.html">Tourism-Corner</a></div>
+          <div class="content-btn"><a href="">Gourmet-Corner</a></div>
+          <div class="content-btn"><a href="">Sports-Corner</a></div>
+        </div>
+        <div class="sucsses">
+          <div class="infomation"><a href="">お問い合わせ</a></div>
+          <div class="infomation"><a href="">このサイトについて</a></div>
+        </div>
+      </div>
+    </div>    
   </body>
 
 </html>
