トップ画面変更

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
 <div class="all">
 <div class="top-contents">
-  <div class="navi">
-  <nav>観光</nav>
-  <nav>グルメ</nav>
-  <nav>体験</nav>
-  </div>
-  <div class="title1">Let's <br> enjoy <br> NIIGATA!</div>
+  <nav >
+    <ul class="main-menu">
+      <li>観光</li>
+      <li>グルメ</li>
+      <li>体験</li>
+    </ul>
+  </nav>
+  <div class="title1">Let's <br> enjoy <br> NIIGATA</div>
   <div class="title2">十日町市　星峠の棚田</div>
   <div class="title3">上越市　高田公園</div>
   <div class="title4">長岡市　長岡花火まつり</div>
