--- a/index.html
+++ b/index.html
@@ -92,6 +92,31 @@
   </div>
 </div>
 
+<div class="access-contents">
+  <div class="access-title">Access</div>
+  <div class="access-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1068551.1749602754!2d138.00252906844096!3d37.629399990641176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8c85f6d84a3b01%3A0xb48bd9847cddf348!2z5paw5r2f55yM!5e0!3m2!1sja!2sjp!4v1606803371234!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+  <div class="access-root">
+    <div class="access-guide">
+      <div class="access-place"><span>東京</span>からのアクセス</div>
+      <div class="access-method"><span>電車</span>をご利用の場合</div>
+      <div class="access-explanation">東京駅→新発田駅 約2時間23分・村上駅 約2時間45分<br>
+        東京駅→上越新幹線(約2時間)→新潟駅→特急｢いなほ｣(約22分)→新発田駅→特｢いなほ｣約23分→村上駅</div>
+      <div class="access-method"><span>車</span>をご利用の場合</div>
+      <div class="access-explanation">練馬IC〜聖籠新発田IC 約3時間50分 ・ 村上瀬波温泉IC 約4時間20分<br>
+        練馬IC→関越自動車道 約2時間50分→長岡JCT→北陸自動車道 約40分→新潟中央JCT→
+        日本海東北自動車道 約20分→聖籠新発田IC→日本海東北自動車道 約30分→村上瀬波温泉IC
+        </div>
+      <div class="access-method"><span>高速バス</span>のご利用の場合</div>
+      <div class="access-explanation">バスタ新宿〜新発田駅 約6時間10分<br>
+        バスタ新宿→夜行便：泉観光バス 約6時間10分→新発田駅<br>
+        
+        バスタ新宿〜池袋〜新発田駅〜月岡温泉 約6時間30分<br>
+        バスタ新宿・池袋サンシャイン〜昼行便：泉観光バス(土日のみの運行)6時間→新発田駅<br>
+        昼行便：泉観光バス(土日のみ運行)約２５分→月岡温泉</div>
+    </div>
+  </div>
+</div>
+
 <footer>
   <div class="footer-contents">
     <div class="footer-btns">
