--- a/index.html
+++ b/index.html
@@ -98,23 +98,26 @@
   <div class="access-root">
     <div class="access-guide">
       <div class="access-place"><span>東京</span>からのアクセス</div>
-      <div class="access-method"><span>電車</span>をご利用の場合</div>
-      <div class="access-explanation">東京駅→新発田駅 約2時間23分・村上駅 約2時間45分<br>
+      <div class="access-method-contents">
+        <div class="access-method"><span>電車</span>をご利用の場合</div>
+        <div class="access-explanation">東京駅→新発田駅 約2時間23分・村上駅 約2時間45分<br>
         東京駅→上越新幹線(約2時間)→新潟駅→特急｢いなほ｣(約22分)→新発田駅→特｢いなほ｣約23分→村上駅</div>
-      <div class="access-method"><span>車</span>をご利用の場合</div>
-      <div class="access-explanation">練馬IC〜聖籠新発田IC 約3時間50分 ・ 村上瀬波温泉IC 約4時間20分<br>
-        練馬IC→関越自動車道 約2時間50分→長岡JCT→北陸自動車道 約40分→新潟中央JCT→
-        日本海東北自動車道 約20分→聖籠新発田IC→日本海東北自動車道 約30分→村上瀬波温泉IC
-        </div>
-      <div class="access-method"><span>高速バス</span>のご利用の場合</div>
-      <div class="access-explanation">バスタ新宿〜新発田駅 約6時間10分<br>
+      </div>
+      <div class="access-method-contents">
+        <div class="access-method"><span>車</span>をご利用の場合</div>
+        <div class="access-explanation">練馬IC〜聖籠新発田IC 約3時間50分 ・ 村上瀬波温泉IC 約4時間20分<br>
+          練馬IC→関越自動車道 約2時間50分→長岡JCT→北陸自動車道 約40分→新潟中央JCT→
+          日本海東北自動車道  　　　　約20分→聖籠新発田IC→日本海東北自動車道 約30分→村上瀬波温泉IC</div>
+      </div>
+      <div class="access-method-contents">
+        <div class="access-method"><span>高速バス</span>のご利用の場合</div>
+        <div class="access-explanation">バスタ新宿〜新発田駅 約6時間10分<br>
         バスタ新宿→夜行便：泉観光バス 約6時間10分→新発田駅<br>
-        
         バスタ新宿〜池袋〜新発田駅〜月岡温泉 約6時間30分<br>
         バスタ新宿・池袋サンシャイン〜昼行便：泉観光バス(土日のみの運行)6時間→新発田駅<br>
-        昼行便：泉観光バス(土日のみ運行)約２５分→月岡温泉</div>
+        　　　昼行便：泉観光バス(土日のみ運行)約２５分→月岡温泉</div>
+      </div>
     </div>
-  </div>
 </div>
 
 <footer>
