--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Niigata-Picture-Book</title>
     <link rel ="stylesheet" href = "https://unpkg.com/ress/dist/ress.min.css">
     <link rel = "stylesheet" href = "top.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>  </head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>  
+  </head>
 <body>
 <div class="all">
 
