--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 <section>
   <div class="greeting-contents">
     <div class="greeting">Do you know NIIGATA?</div>
-    <div class="greeting-explanation show">縦に長い面積を持つ新潟県は、上から下越地方・中越地方・上越地方、そして佐渡地方の大きく4つに分かれています。
-      なぜ上から下越なのか…。その由来は日本の都が京都だった時代まで遡ります。
-      当時まとめて「越（こし）」と呼ばれていた福井・石川・富山・新潟は、分割されて京都に近い地域から「越前」「越中」「越後」と呼ばれるようになりました。
-      この考え方が手本となり、京都に近い方から「上越」「中越」「下越」となったのです。
+    <div class="greeting-explanation show">
+      縦に長い面積を持つ新潟県は、上から下越地方・中越地方・上越地方、そして佐渡地方の大きく4つに分かれています。
+      なぜ上から下越なのか…。その由来は日本の都が京都だった時代まで遡ります。<br>　当時まとめて「越（こし）」と呼ばれていた福井・石川・富山・新潟は、分割されて京都に近い地域から<strong>越前・越中・越後</strong>と呼ばれるようになりました。
+      この考え方が手本となり、京都に近い方から<strong>上越・中越・下越</strong>となったのです。
       そのため、上からではなく下から上越・中越・下越と呼ばれるようになりました。
       新潟県は、海・山・川に恵まれ、四季折々の表情を楽しむことができます。
     </div>
